add lint abort, androidx

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "23.0.1"
+
+    lintOptions {
+          abortOnError false
+    }
+
+
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 16
